changed username to email in login screen

--- a/careweb/templates/client/login.html
+++ b/careweb/templates/client/login.html
@@ -121,7 +121,7 @@ Login
 {% block extra-js %}
 <script type="text/javascript">
   $('#id_username').addClass('form-control');
-  $('#id_username').attr('placeholder', 'Username');
+  $('#id_username').attr('placeholder', 'Email');
 
   // glyphicon
 
