--- a/careweb/templates/client/register.html
+++ b/careweb/templates/client/register.html
@@ -137,6 +137,25 @@ Register
                                                     </div>
                                                 </div>
                                             </div>
+                                             <div class="form-row">
+                                                <div class="col">
+                                                    {% if form.confirm.errors %}
+                                                        <div class="alert alert-danger">
+                                                            {{ form.confirm.errors }}
+                                                        </div>
+                                                    {% endif %}
+                                                    <div class="input-group">
+                                                        
+                                                        {% render_field form.confirm class+="form-control" placeholder="Confirm Password" %}
+                                                        <div class="input-group-prepend">
+                                                            <span class="input-group-text" id="url">
+                                                                <i class="fas fa-key"></i>
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+
                                             <div class="form-row">
                                                 <div class="col-md-12">
                                                     <button class="loginnow" type="submit">REGISTER</button>
