--- a/careweb/templates/client/plan.html
+++ b/careweb/templates/client/plan.html
@@ -69,7 +69,7 @@ Plan
                                     </div>
                                     {% endfor %}
                                 {% endif %}
-                                        <div class="inputArea">
+                                        {% comment %} <div class="inputArea">
                                             <div class="form-row">
                                                 <div class="col">
                                                         <div><label>Package Option</label></div>
@@ -81,6 +81,27 @@ Plan
                                                             </div>
                                                         {% endif %}
                                                         {% render_field form.package_option class+="form-control" %}
+                                                         <div class="input-group-prepend">
+                                                            <span class="input-group-text" id="Site">
+                                                                <i class="fas fa-list"></i>
+                                                            </span>
+                                                        </div>
+        
+                                                    </div>
+                                                </div>
+                                            </div> {% endcomment %}
+                                             <div class="inputArea">
+                                            <div class="form-row">
+                                                <div class="col">
+                                                        <div><label>Package Option</label></div>
+                                                    
+                                                    <div class="input-group">
+                                                        {% if form.plan.errors %}
+                                                            <div class="alert alert-danger">
+                                                                {{ form.plan.errors }}
+                                                            </div>
+                                                        {% endif %}
+                                                        {% render_field form.plan class+="form-control" %}
                                                          <div class="input-group-prepend">
                                                             <span class="input-group-text" id="Site">
                                                                 <i class="fas fa-list"></i>
