changed ids to hashes using django-hashid-field

--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -68,7 +68,7 @@ Profile
                             <ul>
                                 <li>
                                     <div class="content">
-                                        {% if profile.first_name and profile.surname  and profile.middle_name and profile.dob and profile.sex and profile.marital_status %}
+                                        {% if profile.first_name and profile.surname and profile.dob and profile.sex and profile.marital_status %}
                                             <div class="box good">
                                                 <i class="pe-7s-check"></i>
                                             </div>
@@ -111,7 +111,7 @@ Profile
                              
                                 <li>
                                     <div class="content">
-                                        {% if profile.occupation and profile.company  and profile.office_address %}
+                                        {% if profile.occupation %}
                                             <div class="box good">
                                                 <i class="pe-7s-check"></i>
                                             </div>
@@ -133,7 +133,7 @@ Profile
                               
                                 <li>
                                     <div class="content">
-                                        {% if profile.phone_no and profile.whatsapp_no  and profile.home_address %}
+                                        {% if profile.phone_no and profile.home_address %}
                                             <div class="box good">
                                                 <i class="pe-7s-check"></i>
                                             </div>
