--- a/careweb/templates/registration/password_reset_confirm.html
+++ b/careweb/templates/registration/password_reset_confirm.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block title %}
-Login
+Password Reset
 {% endblock title %}
 
 {% comment %}
@@ -23,7 +23,7 @@ Login
                     <div class="col-lg-12">
                         <div class="Content">
                             <h2>
-                                Login
+                                Password Reset
                             </h2>
                             <div class="links">
                                 <ul>
@@ -34,7 +34,7 @@ Login
                                         <span>/</span>
                                     </li>
                                     <li>
-                                        <a class="active" href="login.html">Login</a>
+                                        <a class="active">Password Reset</a>
                                     </li>
                                 </ul>
                             </div>
@@ -54,7 +54,7 @@ Login
             <div class="col-lg-7 col-md-10">
                     <div class="contact_form_wrappre2">
                         <h2>
-                            Login
+                            Password Reset
                         </h2>
                             <form action="#" method="post">{% csrf_token %}
                             {% if form.non_field_errors %}
@@ -64,21 +64,22 @@ Login
                                 </div>
                                 {% endfor %}
                             {% endif %}
-
+{{form.as_p}}
+{{validLink}}
                                 <div class="inputArea">
                                     <div class="form-row">
                                         <div class="col">
                                             <div class="input-group">
-                                                {% if form.username.errors %}
+                                                {% if form.new_password1.errors %}
                                                     <div class="alert alert-danger">
-                                                        {{ form.username.errors }}
+                                                        {{ form.new_password1.errors }}
                                                     </div>
                                                 {% endif %}
-                                                {{ form.username|add_class:"form-control" }}
+                                                {{ form.new_password1|add_class:"form-control" }}
 
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text" id="Site">
-                                                        <i class="fas fa-user"></i>
+                                                        <i class="fas fa-key"></i>
                                                     </span>
                                                 </div>
                                             </div>
@@ -87,12 +88,12 @@ Login
                                     <div class="form-row">
                                         <div class="col">
                                             <div class="input-group">
-                                                {% if form.password.errors %}
+                                                {% if form.new_password2.errors %}
                                                     <div class="alert alert-danger">
-                                                        {{ form.password.errors }}
+                                                        {{ form.new_password2.errors }}
                                                     </div>
                                                 {% endif %}
-                                                {{ form.password|add_class:"form-control" }}
+                                                {{ form.new_password2|add_class:"form-control" }}
 
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text" id="url">
@@ -104,14 +105,10 @@ Login
                                     </div>
                                     <div class="form-row">
                                         <div class="col-md-12">
-                                            <button class="loginnow" type="submit">Login Now</button>
+                                            <button class="loginnow" type="submit">Reset Password</button>
                                         </div>
                                     </div>
-                                    <div class="form-row">
-                                         <div class="col-md-12" style="text-align: center; margin-top: 20px;">
-                                            <a href="{% url 'password-reset' %}">Forgot Password?</a>
-                                        </div>
-                                    </div>
+                                   
                                 </div>
                             </form>
                     </div>
@@ -130,8 +127,12 @@ Login
 
   // glyphicon
 
-  $('#id_password').addClass('form-control');
-  $('#id_password').attr('placeholder', 'Password');
+  $('#id_new_password1').addClass('form-control');
+  $('#id_new_password1').attr('placeholder', 'New Password');
+
+$('#id_new_password2').addClass('form-control');
+  $('#id_new_password2').attr('placeholder', 'Cofirm Password');
+
 
   $('.nav-link').removeClass('active')
   $('#login-nav-link').addClass('active')
