--- a/careweb/templates/registration/password_reset_form.html
+++ b/careweb/templates/registration/password_reset_form.html
@@ -23,7 +23,7 @@ Login
                     <div class="col-lg-12">
                         <div class="Content">
                             <h2>
-                                Login
+                                Forgot Password
                             </h2>
                             <div class="links">
                                 <ul>
@@ -34,7 +34,7 @@ Login
                                         <span>/</span>
                                     </li>
                                     <li>
-                                        <a class="active" href="login.html">Login</a>
+                                        <a class="active">Forgot Password</a>
                                     </li>
                                 </ul>
                             </div>
@@ -54,8 +54,9 @@ Login
             <div class="col-lg-7 col-md-10">
                     <div class="contact_form_wrappre2">
                         <h2>
-                            Login
+                            Forgot Password
                         </h2>
+                        <sub>If your Email address is in our database, we will send you an email with instructions to change your password</sub>
                             <form action="#" method="post">{% csrf_token %}
                             {% if form.non_field_errors %}
                                 {% for error in form.non_field_errors %}
@@ -69,47 +70,25 @@ Login
                                     <div class="form-row">
                                         <div class="col">
                                             <div class="input-group">
-                                                {% if form.username.errors %}
+                                                {% if form.email.errors %}
                                                     <div class="alert alert-danger">
-                                                        {{ form.username.errors }}
+                                                        {{ form.email.errors }}
                                                     </div>
                                                 {% endif %}
-                                                {{ form.username|add_class:"form-control" }}
+                                                {{ form.email|add_class:"form-control" }}
 
                                                 <div class="input-group-prepend">
                                                     <span class="input-group-text" id="Site">
-                                                        <i class="fas fa-user"></i>
+                                                        <i class="fas fa-envelope"></i>
                                                     </span>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="form-row">
-                                        <div class="col">
-                                            <div class="input-group">
-                                                {% if form.password.errors %}
-                                                    <div class="alert alert-danger">
-                                                        {{ form.password.errors }}
-                                                    </div>
-                                                {% endif %}
-                                                {{ form.password|add_class:"form-control" }}
-
-                                                <div class="input-group-prepend">
-                                                    <span class="input-group-text" id="url">
-                                                        <i class="fas fa-key"></i>
-                                                    </span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                     <div class="form-row">
                                         <div class="col-md-12">
-                                            <button class="loginnow" type="submit">Login Now</button>
-                                        </div>
-                                    </div>
-                                    <div class="form-row">
-                                         <div class="col-md-12" style="text-align: center; margin-top: 20px;">
-                                            <a href="{% url 'password-reset' %}">Forgot Password?</a>
+                                            <button class="loginnow" type="submit">Reset My Password</button>
                                         </div>
                                     </div>
                                 </div>
@@ -125,13 +104,10 @@ Login
 
 {% block extra-js %}
 <script type="text/javascript">
-  $('#id_username').addClass('form-control');
-  $('#id_username').attr('placeholder', 'Email');
+  $('#id_email').addClass('form-control');
+  $('#id_email').attr('placeholder', 'Email');
 
   // glyphicon
-
-  $('#id_password').addClass('form-control');
-  $('#id_password').attr('placeholder', 'Password');
 
   $('.nav-link').removeClass('active')
   $('#login-nav-link').addClass('active')
