--- a/careweb/templates/client/profile.html
+++ b/careweb/templates/client/profile.html
@@ -53,7 +53,7 @@ Profile
                         <div class="row">
                             <div class=" col-md-12">
                                 {% if profile.plan %}
-                                    <h5>Plan: {{profile.get_package_option_display }}</h5>
+                                    <h5>Plan: {{profile.plan }}</h5>
                                     <small>Paid {{profile.get_payment_option_display }} by {{profile.get_payment_instrument_display }}</small>
                                     <a href="{% url 'subscription_new' %}" class='btn btn-lg' style="padding: 12px; background-color: #9fde50; color: #fff; border-radius: 50px; font-size: 20px; font-weight: bold;"><i class="pe-7s-cash"> </i> Make Subscription Payment</a>
 
