back button to profile from dependants

--- a/careweb/templates/client/dependants.html
+++ b/careweb/templates/client/dependants.html
@@ -82,6 +82,9 @@ Dependants
 
                                </table>
                         </div>
+                        <div>
+                            <p><a href="{% url 'profile' %}" class="btn btn-success">Back to Profile</a></p>
+                        </div>
                 </div>
             </div>
         </div>
