--- a/careweb/templates/client/dependants.html
+++ b/careweb/templates/client/dependants.html
@@ -57,6 +57,9 @@ Dependants
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-12">
+                    <div>
+                        <p><a href="{% url 'profile' %}" class="btn btn-success"> &laquo; Back to Profile</a></p>
+                    </div>
                         <div class="contact_form_wrappre2">
                             <h2>
                                 Dependants
@@ -82,9 +85,7 @@ Dependants
 
                                </table>
                         </div>
-                        <div>
-                            <p><a href="{% url 'profile' %}" class="btn btn-success">Back to Profile</a></p>
-                        </div>
+                       
                 </div>
             </div>
         </div>
