--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -136,12 +136,12 @@
                 <div class="col-md-6">
                     <div class="box">
                         <div class="left">
-                            <i class="pe-7s-home"></i>
+                            <i class="pe-7s-like"></i>
                         </div>
                         <div class="right">
                             <div class="content">
                                 <h5>
-                                        Home insurance
+                                        LASHMA
                                 </h5>
                                 <p>
                                         When an unknown printer to hello to say
@@ -158,12 +158,12 @@
                 <div class="col-md-6">
                     <div class="box">
                         <div class="left">
-                            <i class="pe-7s-car"></i>
+                            <i class="pe-7s-like"></i>
                         </div>
                         <div class="right">
                             <div class="content">
                                 <h5>
-                                        Car insurance
+                                        LASHMA Quality Life
                                 </h5>
                                 <p>
                                         When an unknown printer to hello to say
@@ -177,6 +177,8 @@
                         </div>
                     </div>
                 </div>
+                {% comment "" %}
+                
                 <div class="col-md-6">
                     <div class="box">
                         <div class="left">
@@ -221,6 +223,9 @@
                         </div>
                     </div>
                 </div>
+
+                {% endcomment %}
+
             </div>
         </div>
     </section>
@@ -269,6 +274,7 @@
         </div>
     </section>
 <!-- Give And Take NumberSection End -->
+{% comment %}
 
 <!-- History Section Area Start -->
     <section id="history" class="history">
@@ -387,6 +393,7 @@
         </div>
     </section>
 <!-- History Section Area End -->
+
 
 
 <!-- Testimonial Area Start -->
@@ -524,3 +531,4 @@
         </div>
     </section>
     <!-- Counter Area End --> 
+{% endcomment %}
