--- a/careweb/templates/footer.html
+++ b/careweb/templates/footer.html
@@ -1,5 +1,7 @@
 {% load staticfiles %}
  <footer class="footer">
+ {% comment "" %}
+ 
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-lg-4">
@@ -156,6 +158,9 @@
                 </div>
             </div>
         </div>
+
+ {% endcomment %}
+
         <div class="copyRightArea">
             <div class="container">
                 <div class="row">
