--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -16,9 +16,7 @@
                                             <div class="innerSize">
                                                 <h1 class="caption-title">Insurances Do Matter</h1>
                                                 <p class="caption-desc">
-                                                    When an unknown printer took a galley of type and scrambled it to make a
-                                                    type specimen book. It has survived not only five centuries, but also the
-                                                    leap into electronic typesetting, remaining essentially unchanged.
+                                                    Health Insurance is a necessity today. Given the increasing medical costs, this insurance policy and the coverage it offers can provide several benefits to the insured and the insured’s family. It Protects savings, Provides coverage for self and family , enables quality treatment and lifestyle changes
                                                 </p>
                                                 <div class="slide-btn">
                                                     <a class="mybtn" href="#about">Learn More</a>
@@ -47,9 +45,7 @@
                                             <div class="innerSize">
                                                 <h1 class="caption-title">Insurances Do Matter</h1>
                                                 <p class="caption-desc">
-                                                    When an unknown printer took a galley of type and scrambled it to make a
-                                                    type specimen book. It has survived not only five centuries, but also the
-                                                    leap into electronic typesetting, remaining essentially unchanged.
+                                                    Health Insurance is a necessity today. Given the increasing medical costs, this insurance policy and the coverage it offers can provide several benefits to the insured and the insured’s family. It Protects savings, Provides coverage for self and family , enables quality treatment and lifestyle changes
                                                 </p>
                                                 <div class="slide-btn">
                                                     <a class="mybtn" href="#about">Learn More</a>
