--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -45,7 +45,7 @@
                                             <div class="innerSize">
                                                 <h1 class="caption-title">Insurances Do Matter</h1>
                                                 <p class="caption-desc">
-                                                    Health Insurance is a necessity today. Given the increasing medical costs, this insurance policy and the coverage it offers can provide several benefits to the insured and the insured’s family. It Protects savings, Provides coverage for self and family , enables quality treatment and lifestyle changes
+                                                    Whether you're relatively healthy or chronically ill, health insurance can provide the financial protection you need for both routine and unexpected healthcare needs. ... Health insurance can help protect you from high medical costs, whether expected or not, through copayments and coinsurance.
                                                 </p>
                                                 <div class="slide-btn">
                                                     <a class="mybtn" href="#about">Learn More</a>
@@ -239,8 +239,7 @@
                             </h2>
                             
                             <p>
-                                when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                                the book type of spaciman and scrambled it to make a type specimen book.
+                            A Health Insurance plan is mandatory in today’s age when the cost of medicine is increasing by leaps and bounds whereas the depth of our pockets remains the same. As such, bearing the costs of a medical emergency becomes financially stressful and inconvenient. That is why a health plan has become a priority and more and more people are leaning on a health insurance plan to secure their finances.
                             </p>
                         </div>
                     </div>
