--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -143,10 +143,10 @@
                                         When an unknown printer to hello to say
                                         type and scrambled it make me happy and i love this.
                                 </p>
-                                <a href="lifeInsurance.html">
+                                {% comment %} <a href="lifeInsurance.html">
                                         <i class="fas fa-caret-right"></i>
                                         Read More
-                                </a>
+                                </a> {% endcomment %}
                             </div>
                         </div>
                     </div>
@@ -165,10 +165,10 @@
                                         When an unknown printer to hello to say
                                         type and scrambled it make me happy and i love this.
                                 </p>
-                                <a href="lifeInsurance.html">
+                                {% comment %} <a href="lifeInsurance.html">
                                         <i class="fas fa-caret-right"></i>
                                         Read More
-                                </a>
+                                </a> {% endcomment %}
                             </div>
                         </div>
                     </div>
