modifications on front pages

--- a/careweb/templates/base.html
+++ b/careweb/templates/base.html
@@ -38,6 +38,7 @@
 	<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
 	<!--Responsive Stylesheet-->
 	<link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}">
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Lobster|PT+Serif|Solway|Sulphur+Point&display=swap" rel="stylesheet">
 </head>
 
 <body>
