--- a/careweb/templates/content.html
+++ b/careweb/templates/content.html
@@ -122,8 +122,7 @@
                         </h2>
                         
                         <p>
-                            when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                            the book type of spaciman and scrambled it to make a type specimen book.
+                            Why you should join FutureCare
                         </p>
                     </div>
                 </div>
@@ -140,8 +139,7 @@
                                         LASHMA
                                 </h5>
                                 <p>
-                                        When an unknown printer to hello to say
-                                        type and scrambled it make me happy and i love this.
+                                    FutureCare health tips
                                 </p>
                                 {% comment %} <a href="lifeInsurance.html">
                                         <i class="fas fa-caret-right"></i>
@@ -162,8 +160,7 @@
                                         LASHMA Quality Life
                                 </h5>
                                 <p>
-                                        When an unknown printer to hello to say
-                                        type and scrambled it make me happy and i love this.
+                                    Quality Life health care
                                 </p>
                                 {% comment %} <a href="lifeInsurance.html">
                                         <i class="fas fa-caret-right"></i>
